--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,16 @@
     "posttest": "node ./test/endTest.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
