--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -9,6 +9,12 @@
       "name": "Run npm start",
       "request": "launch",
       "type": "node-terminal"
+    },
+    {
+      "command": "npm test",
+      "name": "Run Tests",
+      "request": "launch",
+      "type": "node-terminal"
     }
   ]
 }
