--- a/backend/package.json
+++ b/backend/package.json
@@ -15,14 +15,14 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
-    "jest": "^26.6.3",
+    "jest": "^26.5.3",
     "supertest": "^6.1.3"
   },
   "type": "module",
