file upload should work, not yet tested

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -6,7 +6,7 @@
   "configurations": [
     {
       "command": "npm start",
-      "name": "Run npm start",
+      "name": "Start Backend",
       "request": "launch",
       "type": "node-terminal"
     },
