--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "mongoose": "^5.12.3",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
+    "sharp": "^0.28.1",
     "validator": "^13.5.2"
   },
   "devDependencies": {
