--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,28 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "postcss-nesting": "^7.0.1",
+    "typescript": "^4.1.2",
     "vite": "^2.1.5"
+  },
+  
+  "postcss": {
+    "plugins": {
+      "postcss-nesting": {}
+    }
   }
+
 }
