--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,14 @@
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.32.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "postcss-nesting": "^7.0.1",
     "typescript": "^4.1.2",
     "vite": "^2.1.5"
-  },
-  
-  "postcss": {
-    "plugins": {
-      "postcss-nesting": {}
-    }
   }
-
 }
