frontend routing and nav, backend swagger and start of images service

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start": "DEBUG=current:server node --require dotenv/config --experimental-specifier-resolution=node ./src/bin/www",
-    "test": "DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest",
+    "test": "DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest || npm run cleanup",
     "pretest": "node ./test/startTest.js",
-    "posttest": "node ./test/endTest.js"
+    "cleanup": "node ./test/endTest.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
