added some documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,5 +11,6 @@ JWT_PRIVATE_KEY=yourprivatekey
 FRONTEND_URL=https://localhost:3001
 BACKEND_URL=http://localhost:3000
 
+# Anwendung funktioniert auch ohne API Key, allerdings werden dann keine Mails gesendet
 SENDGRID_API_KEY=sendgridapikey
 DISABLE_EMAILS=true
