--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,8 +22,7 @@ jobs:
   test-db:
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    container: node:10.18-jessie
-
+    container: node:14
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
@@ -37,16 +36,11 @@ jobs:
         ports:
           - 27018:27018
           
-  test:
-    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js v14
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
-    - run: npm ci
-      working-directory: backend
-    - run: npm test
-      working-directory: backend
+      - uses: actions/checkout@v2
+
+      - run: npm ci
+        working-directory: backend
+      - run: npm test
+        working-directory: backend
       
