--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node --require dotenv/config --experimental-specifier-resolution=node ./src/bin/www",
     "test": "DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest || npm run cleanup",
-    "pretest": "node ./test/startTest.js",
+    "local-pretest": "node ./test/startTest.js",
     "cleanup": "node ./test/endTest.js"
   },
   "dependencies": {
