--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
 COMPOSE_PROJECT_NAME=current_land
+
+PORT=3000
+
 MONGO_ADMIN_USERNAME=adminusr
 MONGO_ADMIN_PASSWORD=adminpassword
 MONGO_HOSTNAME=localhost
@@ -10,6 +13,10 @@ JWT_PRIVATE_KEY=yourprivatekey
 
 FRONTEND_URL=https://localhost:3001
 BACKEND_URL=http://localhost:3000
+
+ADMIN_USERNAME=admin
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=exampleadminpassword
 
 # Anwendung funktioniert auch ohne API Key, allerdings werden dann keine Mails gesendet
 SENDGRID_API_KEY=sendgridapikey
