--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node --require dotenv/config --experimental-specifier-resolution=node ./src/bin/www",
-    "test": "DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest || npm run cleanup",
+    "test": "--experimental-vm-modules node_modules/.bin/jest",
+    "local-test": "npm run local-pretest && DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest || npm run local-cleanup",
     "local-pretest": "node ./test/startTest.js",
-    "cleanup": "node ./test/endTest.js"
+    "local-cleanup": "node ./test/endTest.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
