--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Backend CI
 
 on:
   push:
@@ -24,7 +24,7 @@ env:
   ADMIN_PASSWORD: exampleadminpassword
 
 jobs:
-  test-db:
+  run-tests:
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
     container: node:14
