--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node --require dotenv/config --experimental-specifier-resolution=node ./src/bin/www",
-    "test": "--experimental-vm-modules node_modules/.bin/jest",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "local-test": "npm run local-pretest && DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest || npm run local-cleanup",
     "local-pretest": "node ./test/startTest.js",
     "local-cleanup": "node ./test/endTest.js"
