--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,7 +12,7 @@ on:
 env:
   MONGO_ADMIN_USERNAME: adminusr
   MONGO_ADMIN_PASSWORD: T6ATUYMKMW5EN7ZV
-  MONGO_HOSTNAME: mongo
+  MONGO_HOSTNAME: 127.0.0.1
   MONGO_PORT: 27018
   MONGO_DB_NAME=: current
   JWT_EXPIRY_TIME: 300
@@ -38,6 +38,11 @@ jobs:
         env:
           MONGO_INITDB_ROOT_USERNAME: ${{env.MONGO_ADMIN_USERNAME}}
           MONGO_INITDB_ROOT_PASSWORD: ${{env.MONGO_ADMIN_PASSWORD}}
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
         ports:
           - 27018:27018
           
