--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,7 +12,7 @@ on:
 env:
   MONGO_ADMIN_USERNAME: adminusr
   MONGO_ADMIN_PASSWORD: T6ATUYMKMW5EN7ZV
-  MONGO_HOSTNAME: 127.0.0.1
+  MONGO_HOSTNAME: mongo
   MONGO_PORT: 27018
   MONGO_DB_NAME=: current
   JWT_EXPIRY_TIME: 300
