--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -14,7 +14,7 @@ env:
   MONGO_ADMIN_PASSWORD: T6ATUYMKMW5EN7ZV
   MONGO_HOSTNAME: mongo
   MONGO_PORT: 27018
-  MONGO_DB_NAME=: current
+  MONGO_DB_NAME: current
   JWT_EXPIRY_TIME: 300
   JWT_PRIVATE_KEY: SzYQDXNesQcXe9Xa5myP2dkALW
   FRONTEND_URL: https://localhost:5001
