--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -44,7 +44,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-          - "127.0.0.1:${{env.MONGO_PORT}}:27017"
+          - "127.0.0.1:$MONGO_PORT:27017"
           
     steps:
       - uses: actions/checkout@v2
