--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -27,7 +27,7 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
-    container: node:14
+    # container: node:14
     # Service containers to run with `container-job`
     services:
       # Label used to access the service container
