--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:14-alpine
 ENV NODE_ENV=production
 WORKDIR /app
-COPY ["./backend/package.json", "./backend/package-lock.json*", "./"]
+COPY ["./package.json", "./package-lock.json*", "./"]
 RUN npm ci
-COPY ./backend/src .
+COPY ./src .
 CMD ["node", "--experimental-specifier-resolution=node", "./bin/www"]
