fix authentication error

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node --require dotenv/config --experimental-specifier-resolution=node ./src/bin/www",
     "test": "node --experimental-vm-modules node_modules/.bin/jest --forceExit",
-    "local-test": "npm run local-pretest && DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest --forceExit || npm run local-cleanup",
+    "local-test": "npm run local-pretest && DOTENV_CONFIG_PATH=.env.test node --experimental-vm-modules --require dotenv/config node_modules/.bin/jest --forceExit ; npm run local-cleanup",
     "local-pretest": "node ./test/startTest.js",
     "local-cleanup": "node ./test/endTest.js"
   },
