--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "^5.1.7",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-query": "^3.16.1",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.11"
   },
