--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-query": "^3.16.1",
-    "react-router-dom": "^5.2.0",
-    "sass": "^1.32.11"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.1.2",
-    "vite": "^2.1.5"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-query": "^3.17.2",
+    "react-router-dom": "^5.2.0",
+    "sass": "^1.32.8",
+    "typescript": "^4.2.3",
+    "vite": "^2.0.5"
   }
 }
