--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite --port 3001",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@types/react": "^17.0.11",
@@ -16,7 +18,16 @@
     "react-query": "^3.17.2",
     "react-router-dom": "^5.2.0",
     "sass": "^1.32.8",
-    "typescript": "^4.2.3",
-    "vite": "^2.0.5"
+    "typescript": "^4.3.4",
+    "vite": "^2.3.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@storybook/addon-actions": "^6.3.0-rc.10",
+    "@storybook/addon-essentials": "^6.3.0-rc.10",
+    "@storybook/addon-links": "^6.3.0-rc.10",
+    "@storybook/react": "^6.3.0-rc.10",
+    "babel-loader": "^8.2.2",
+    "storybook-builder-vite": "^0.0.9"
   }
 }
