--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,22 +15,22 @@
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.17.2",
+    "react-query": "^3.17.3",
     "react-router-dom": "^5.2.0",
-    "rehype-react": "^6.2.0",
+    "rehype-react": "^6.2.1",
     "remark-parse": "^8.0.3",
     "remark-rehype": "^8.1.0",
     "sass": "^1.32.8",
     "typescript": "^4.3.4",
-    "unified": "^9.2.0",
+    "unified": "^9.2.1",
     "vite": "^2.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.3.0-rc.11",
-    "@storybook/addon-essentials": "^6.3.0-rc.11",
-    "@storybook/addon-links": "^6.3.0-rc.11",
-    "@storybook/react": "^6.3.0-rc.11",
+    "@storybook/addon-actions": "^6.3.0",
+    "@storybook/addon-essentials": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
+    "@storybook/react": "^6.3.0",
     "babel-loader": "^8.2.2",
     "storybook-builder-vite": "^0.0.9"
   }
