--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@sentry/react": "^6.8.0",
+    "@sentry/tracing": "^6.8.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.7",
     "@types/react-router-dom": "^5.1.7",
