tests should be working

--- a/.env.test.example
+++ b/.env.test.example
@@ -1,6 +1,6 @@
-COMPOSE_PROJECT_NAME=current_land_test
+COMPOSE_PROJECT_NAME=current_land
 
-
+PORT=3100
 
 MONGO_ADMIN_USERNAME=adminusr
 MONGO_ADMIN_PASSWORD=X7W4SuHSE2deMzjJalwkndgxX5
@@ -11,8 +11,8 @@ MONGO_DB_NAME=current
 JWT_EXPIRY_TIME=300
 JWT_PRIVATE_KEY=L44wYA228BFGUKjuzc4w32waklw
 
-FRONTEND_URL=https://current.land
-BACKEND_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3101
+BACKEND_URL=http://localhost:3100
 
 ADMIN_USERNAME=admin
 ADMIN_EMAIL=admin@example.com
