--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,44 +5,44 @@ services:
     build: 
       context: ./frontend
       args:
-        VITE_BACKEND_URL: http://localhost:3003
+        VITE_BACKEND_URL: ${BACKEND_URL}
     depends_on:
       - backend
     ports:
       - 3002:80
     environment:
-      VITE_BACKEND_URL: http://localhost:3003
+      VITE_BACKEND_URL: ${BACKEND_URL}
   
   backend:
     build: ./backend
     depends_on:
       - db
     ports:
-      - 3003:3000
+      - ${PORT}:3000
     environment: 
-      PORT: 3000
-      MONGO_ADMIN_USERNAME: adminusr
-      MONGO_ADMIN_PASSWORD: adminpassword
-      MONGO_HOSTNAME: db
-      MONGO_PORT: 27017
-      MONGO_DB_NAME: current
-      JWT_EXPIRY_TIME: 300
-      JWT_PRIVATE_KEY: yourprivatekey
-      FRONTEND_URL: https://localhost:3002
-      BACKEND_URL: http://localhost:3003
-      ADMIN_USERNAME: admin
-      ADMIN_EMAIL: admin@example.com
-      ADMIN_PASSWORD: exampleadminpassword
+      PORT: ${PORT}
+      MONGO_ADMIN_USERNAME: ${MONGO_ADMIN_USERNAME}
+      MONGO_ADMIN_PASSWORD: ${MONGO_ADMIN_PASSWORD}
+      MONGO_HOSTNAME: ${MONGO_HOSTNAME}
+      MONGO_PORT: ${MONGO_PORT}
+      MONGO_DB_NAME: ${MONGO_DB_NAME}
+      JWT_EXPIRY_TIME: ${JWT_EXPIRY_TIME}
+      JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY}
+      FRONTEND_URL: ${FRONTEND_URL}
+      BACKEND_URL: ${BACKEND_URL}
+      ADMIN_USERNAME: ${ADMIN_USERNAME}
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
   db:
     image: mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: adminusr
-      MONGO_INITDB_ROOT_PASSWORD: adminpassword
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ADMIN_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ADMIN_PASSWORD}
     volumes:
       - mongodata:/data/db
     ports:
       # https://github.com/docker-library/mongo/issues/177#issuecomment-301945353
-      - "127.0.0.1:27017:27017"
+      - "127.0.0.1:${MONGO_PORT}:27017"
 
 
 volumes:
