--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /app
 COPY ["./package.json", "./package-lock.json*", "./"]
 RUN npm ci
 COPY ./src .
+ENV DEBUG=service:*,route:*
 CMD ["node", "--experimental-specifier-resolution=node", "./bin/www"]
