--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,31 +5,31 @@ services:
     build: 
       context: ./frontend
       args:
-        VITE_BACKEND_URL: ${BACKEND_URL}
+        VITE_BACKEND_URL: http://localhost:3101
     depends_on:
       - backend
     ports:
-      - 3002:80
+      - 3100:80
     environment:
-      VITE_BACKEND_URL: ${BACKEND_URL}
+      VITE_BACKEND_URL: http://localhost:3101
   
   backend:
     build: ./backend
     depends_on:
       - db
     ports:
-      - ${PORT}:3000
+      - 3101:3000
     environment: 
       PORT: ${PORT}
       MONGO_ADMIN_USERNAME: ${MONGO_ADMIN_USERNAME}
       MONGO_ADMIN_PASSWORD: ${MONGO_ADMIN_PASSWORD}
-      MONGO_HOSTNAME: ${MONGO_HOSTNAME}
+      MONGO_HOSTNAME: db
       MONGO_PORT: ${MONGO_PORT}
       MONGO_DB_NAME: ${MONGO_DB_NAME}
       JWT_EXPIRY_TIME: ${JWT_EXPIRY_TIME}
       JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY}
       FRONTEND_URL: ${FRONTEND_URL}
-      BACKEND_URL: ${BACKEND_URL}
+      BACKEND_URL: http://localhost:3101
       ADMIN_USERNAME: ${ADMIN_USERNAME}
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
