--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --port 3001",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "serve": "vite preview",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
@@ -20,20 +20,21 @@
     "react-query": "^3.17.3",
     "react-router-dom": "^5.2.0",
     "rehype-react": "^6.2.1",
-    "remark-parse": "^8.0.3",
+    "rehype-sanitize": "^4.0.0",
+    "remark-parse": "^9.0.0",
     "remark-rehype": "^8.1.0",
     "sass": "^1.32.8",
     "typescript": "^4.3.4",
     "unified": "^9.2.1",
-    "vite": "^2.3.7"
+    "vite": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@storybook/addon-actions": "^6.3.0",
-    "@storybook/addon-essentials": "^6.3.0",
-    "@storybook/addon-links": "^6.3.0",
-    "@storybook/react": "^6.3.0",
+    "@storybook/addon-actions": "^6.3.3",
+    "@storybook/addon-essentials": "^6.3.3",
+    "@storybook/addon-links": "^6.3.3",
+    "@storybook/react": "^6.3.3",
     "babel-loader": "^8.2.2",
-    "storybook-builder-vite": "^0.0.9"
+    "storybook-builder-vite": "^0.0.10"
   }
 }
